# psychic-fortnight

./: .coveragerc  .env.example  .gitignore  AGENTS.md  CLAUDE.MD  CLAUDE.md  Claude.MD  Makefile  OPEN_DECISIONS.md  ORCHESTRA.md  PROJECT_CONTEXT.md  README.md  V1_ROADMAP.md  docker-compose.yml  main.py  post_release_compliance_report.md  pyproject.toml  tach.toml
.github/workflows/: ci.yml
Operations/: ERP_Operations_File_Notes.md
Operations/Alert List - Alerts/: IMOS - Alert List _ Veson Help Center.html
Operations/Berth Schedule/: IMOS - Berth Schedule _ Veson Help Center.html
Operations/Bunker Requirement : Bunkers/: IMOS - Bunker Requirement _ Veson Help Center.html
Operations/Claims/: IMOS - Claim _ Veson Help Center.html
alembic/: env.py  script.py.mako
docs/adr/: 0001-modular-monolith.md  (+16 more)
frontend/: .eslintrc.cjs  .pnpmfile.cjs  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
ingest/: research_a_result_format.md  research_b_result_format.md
openapi/: openapi.json
prompts/: block_02_master_data.md  block_04_vessel_schedule.md  blocks_05_to_10_verification.md  prompt_a_repo_selection.md  prompt_b_stack_design.md
scripts/: generate_openapi.py  seed_e2e_data.py  seed_e2e_user.py
simple-local-site/: index.html  script.js  styles.css
spec_creation/: claude_ignore.md  repository_scaffold_bundle.sh
src/: app.py  config.py  dependencies.py  exceptions.py
technical_principles/: 12_factor_app.md  Claude.MD
templates/: plan.template.md
tests/: conftest.py
(+295 files in other folders)
